➕ add @types/inquirer

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/sinclairzx81/typebox-codegen#readme",
   "devDependencies": {
     "@sinclair/hammer": "^0.17.2",
+    "@types/inquirer": "^9.0.7",
     "@types/node": "^18.15.11",
     "@types/prettier": "^2.7.2"
   },
